--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,11 @@
             <version>1.2.56</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.56</version>
+        </dependency>
     </dependencies>
 
     <build>
